Fixed cell overflow

--- a/Shortify/wwwroot/css/site.css
+++ b/Shortify/wwwroot/css/site.css
@@ -16,3 +16,11 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.table {
+    table-layout: fixed;
+}
+
+.table td {
+    word-wrap: break-word;
+}
